# napari-command-palette

./: .pre-commit-config.yaml  README.md  launch.py  setup.cfg  tox.ini
src/napari_command_palette/: __init__.py  _api.py  _defaults.py  _install.py  _ndimage.py  _plugins.py  _widget.py  napari.yaml
src/napari_command_palette/_tests/: test_widget.py
